<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".act.FilterActivity">

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardGroup1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCitySelect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/city"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onClickSelectCity"
                        android:padding="10dp"
                        android:text="@string/select_city"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvUneverSelect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/unever"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUnever"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onClickSelectUnever"
                        android:padding="10dp"
                        android:text="@string/select_unever"
                        android:textSize="15sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardGroup2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCatSelect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/category"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:onClick="onClickSelectCategory"
                        android:padding="10dp"
                        android:text="@string/select_category"
                        android:textSize="15sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardGroup3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCertificate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/certificate"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switchCertiwicat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="50dp"
                        android:minHeight="48dp"
                        android:text="Выдача сертификата"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/price"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switchCertiwicat2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="50dp"
                        android:minHeight="48dp"
                        android:text="Бесплатно"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/second_color"
                android:onClick="onClickDone"
                android:text="Применить" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>