<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvResetEmailWarning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/sing_send_reset_warning"
                android:textColor="@color/design_default_color_error"
                android:textStyle="italic"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/edSingEmail"
                app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
                app:layout_constraintStart_toStartOf="@+id/edSingEmail" />

            <EditText
                android:id="@+id/edSignPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/ic_form_input_password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="45dp"
                app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
                app:layout_constraintStart_toStartOf="@+id/edSingEmail"
                app:layout_constraintTop_toBottomOf="@+id/edSingEmail" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btGoogleSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
                app:layout_constraintStart_toStartOf="@+id/edSingEmail"
                app:layout_constraintTop_toBottomOf="@+id/btForgetPassword" />

            <EditText
                android:id="@+id/edSingEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:background="@drawable/ic_form_input"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btSingUpIn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/second_color"
                android:text="@string/sing_up_action"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
                app:layout_constraintStart_toStartOf="@+id/edSingEmail"
                app:layout_constraintTop_toBottomOf="@+id/edSignPassword" />

            <Button
                android:id="@+id/btForgetPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:text="@string/forget_password"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/edSingEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edSingEmail"
                app:layout_constraintTop_toBottomOf="@+id/btSingUpIn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>